next.  Developers are strongly encouraged to document their changes and
their impacts on the users here.  (Please add the most recent changes to 
the top of the list.)

For a complete change history, please see the Subversion log comments.

Current Version (SVN trunk, 6.1-dev, future 6.2): 
-------------------------------------------------

- Fixed legend image problem with annotation layers with label offsets (#4147)

- Add support for mutiple labels per feature (RFC81)

- Add support for INSPIRE view service (RFC 75)

- Drop support for GDAL/OGR older than 1.5.0 (#4224)

- PDF backend: add support for generating geospatial PDF, when
  GDAL 2.0 with PDF driver is used, and the GEO_ENCODING FORMATOPTION
  (set to ISO32000 or OGC_BP) is added to the OUTPUTFORMAT definition. (#4216)

- Python mapscript: fix swig mappings to work with both python 2.5.and 2.6 (#3940)

- Added classgroup CGI parameter support (#4207)

- Java mapscript: renamed shared library and completed libtool support (#2595)

- Fixed WCS 2.0 axis order (#4191)

- Added MS_CJC_* constants in PHP/MapScript (#4183)

- Fixed Memory Leak with Fribidi Strings (#4188)

- Allow multiple label definitions within a class (RFC 77/#4127)

- shp2img: make it possible to specify layers (with -l option) that match GROUP names.

- reuse a pre-parsed mapfile across fastcgi loops in case the mapfile is
  specified with the MS_MAPFILE env variable. (#4018)

- Ability to do use PropertyIsLike with a column of a different type than text (postgis) (#4176)

- Fixed SLD with FILTER doesn't apply properly to database layers (#4112)

- Fixed lexer buffer size issue with single quotes in a string  (#4175)

- WFS Quote Escape issue (#4087)

- Raster layer fails to be drawn if the window is less than half a pixel (#4172)

- shptree: Improvement to reduce size of .qix files (#4169)

- avoid potential gd fontcache deadlock on fastcgi exit signals(#4093)

- Adjusted WCS GetCapabilities for an empty list of layers (#4140)
