@@ -36,7 +36,8 @@
 void msIO_resetHandlers(void);
 void msIO_installStdoutToBuffer(void);
 void msIO_installStdinFromBuffer(void);
-const char *msIO_stripStdoutBufferContentType(void);
+%newobject msIO_stripStdoutBufferContentType;
+const char *msIO_stripStdoutBufferContentType();
 void msIO_stripStdoutBufferContentHeaders(void);
 
 /* mapscript only extensions */
@@ -89,7 +90,7 @@ gdBuffer msIO_getStdoutBufferBytes() {
 
     gdBuf.data = buf->data;
     gdBuf.size = buf->data_offset;
-    gdBuf.owns_data = MS_FALSE;
+    gdBuf.owns_data = MS_TRUE;
 
     /* we are seizing ownership of the buffer contents */
     buf->data_offset = 0;
